# cmake_code

./: README.md
cmake_sample/multi_dir/: CMakeLists.txt  main.c  setup.sh
cmake_sample/multi_dir/add_dir/: CMakeLists.txt  add.c  add.h
cmake_sample/multi_file/: CMakeLists.txt  add.cpp  main.cpp
cmake_sample/single_file/: CMakeLists.txt  sample.cpp
